[package]
name = "test_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-web-middleware-keycloak-auth = "0.3.0"
env_logger = "0.9.0"
awc = {version = "2.0.3", features = ["openssl"]}
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1"